--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: macos-26
     strategy:
       matrix:
-        number: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+        number: [1, 2, 3, 4, 5]
       fail-fast: false
       max-parallel: 1
     steps:
@@ -45,13 +45,19 @@ jobs:
       with:
         key: ccache-iphonesimulator-${{ steps.rev.outputs.rev }}
         path: ccache
-        restore-keys: ccache-iphonesimulator
+        restore-keys: ccache-iphonesimulator-
     - if: ${{ matrix.number != 1 }}
       name: Download Ccache Artifact
       uses: actions/download-artifact@v6.0.0
       with:
         name: ccache-iphonesimulator
         path: ccache
+    - name: Check Ccache
+      run: ccache -s
+      env:
+        CCACHE_BASEDIR: ${{ github.workspace }}/chromium
+        CCACHE_DIR: ${{ github.workspace }}/ccache
+        CCACHE_SLOPPINESS: time_macros
     - name: Copy .setup-gn
       run: cp -r ./src/.setup-gn ./chromium/
     - name: Set up the build
@@ -76,7 +82,13 @@ jobs:
         if-no-files-found: error
         retention-days: 1
         include-hidden-files: true
-    - if: ${{ matrix.number == 10 || steps.build.outcome == 'success' }}
+    - name: Check Ccache
+      run: ccache -s
+      env:
+        CCACHE_BASEDIR: ${{ github.workspace }}/chromium
+        CCACHE_DIR: ${{ github.workspace }}/ccache
+        CCACHE_SLOPPINESS: time_macros
+    - if: ${{ matrix.number == 5 || steps.build.outcome == 'success' }}
       name: Save Ccache Directory
       uses: actions/cache/save@v4.3.0
       with:
@@ -84,28 +96,7 @@ jobs:
         path: |
           ccache
           !ccache/tmp
-    - if: ${{ matrix.number != 10 && steps.build.outcome == 'success' }}
-      name: Cancel Workflow
-      uses: actions/github-script@v8.0.0
-      with:
-        script: |
-          github.rest.actions.cancelWorkflowRun({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            run_id: context.runId
-          })
-    - if: ${{ matrix.number != 10 && steps.build.outcome == 'success' }}
-      name: Waiting for Cancel
-      uses: actions/github-script@v8.0.0
-      with:
-        script: |
-          const delay = ms => new Promise(res => setTimeout(res, ms));
-  
-          while (true) {
-            core.info('Waiting for workflow to cancel ...');
-            await delay(5000);
-          }
-    - if: ${{ matrix.number != 10 && steps.build.outcome == 'failure' }}
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'failure' }}
       name: Upload Ccache Artifact
       uses: actions/upload-artifact@v5.0.0
       with:
@@ -117,3 +108,24 @@ jobs:
         retention-days: 1
         overwrite: true
         include-hidden-files: true
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'success' }}
+      name: Cancel Workflow
+      uses: actions/github-script@v8.0.0
+      with:
+        script: |
+          github.rest.actions.cancelWorkflowRun({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            run_id: context.runId
+          })
+    - if: ${{ matrix.number != 5 && steps.build.outcome == 'success' }}
+      name: Waiting for Cancel
+      uses: actions/github-script@v8.0.0
+      with:
+        script: |
+          const delay = ms => new Promise(res => setTimeout(res, ms));
+  
+          while (true) {
+            core.info('Waiting for workflow to cancel ...');
+            await delay(5000);
+          }
